# ccx-upgrades-data-eng

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  build_deploy.sh  docker-compose.yml  logging.yaml  pr_check.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: bdd.yaml  bdd.yml  test.yaml  test.yml
.tekton/: upgrades-data-eng-pull-request.yaml  upgrades-data-eng-push.yaml
ccx_upgrades_data_eng/: auth.py  config.py  examples.py  inference.py  logging_utils.py  main.py  metrics.py  models.py  rhobs.py  rhobs_queries.py  urls.py  utils.py
ccx_upgrades_data_eng/tests/: __init__.py  test_auth.py  test_config.py  test_inference.py  test_main.py  test_metrics.py  test_models.py  test_rhobs.py  test_rhobs_queries.py  test_sso_token_refresh.py  test_urls.py  test_utils.py
dashboards/: grafana-dashboard-insights-ccx-upgrades.configmap.yaml
deploy/: clowdapp.yaml  sso-mock.yaml  test.yaml
docs/: deployment.md
src/: examples.py  main.py  models.py  test_main.py  test_models.py
