[build-system]
requires = ["setuptools>=77.0.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ccx-upgrades-data-eng"
dynamic = ["version"]
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name="CCX Processing Team", email="ccx-core-processing-team@redhat.com"}
]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

requires-python = ">= 3.10"
dependencies = [
    "boto3",
    "cachetools==7.1.4",
    "fastapi==0.138.0",
    "fastapi-utils==0.8.0",
    "prometheus_fastapi_instrumentator==8.0.1",
    "pydantic-settings==2.14.2",
    "python-json-logger",
    "requests==2.34.2",
    "requests-oauthlib==2.0.0",
    "sentry-sdk>=1.37.1",
    "uvicorn[standard]==0.49.0",
    "watchtower"
]

[project.urls]
Homepage = "https://github.com/RedHatInsights/ccx-upgrades-data-eng"

[tool.setuptools.packages.find]
exclude = ["*.tests"]

[tool.setuptools_scm]

[project.optional-dependencies]
test = [
    "httpx",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]
