[metadata]
name = ccx-upgrades-data-eng
author = Red Hat Inc.
description-file = README.md
license = Apache 2.0
home-page = https://gitlab.cee.redhat.com/ccx/ccx-upgrades-data-eng
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.9.7

[options]
packages = find:
python_requires = >=3.6
install_requires =
    uvicorn[standard]==0.31.1
    fastapi==0.115.4
    fastapi-utils==0.2.1
    requests==2.32.3
    requests-oauthlib == 1.3.1
    prometheus_fastapi_instrumentator==7.0.0
    cachetools==5.5.0

    boto3
    python-json-logger
    watchtower

[options.packages.find]
exclude=
    *.tests
