[metadata]
name = ccx-upgrades-data-eng
author = Red Hat Inc.
description-file = README.md
license = Apache 2.0
home-page = https://gitlab.cee.redhat.com/ccx/ccx-upgrades-data-eng
classifiers =
    Framework :: FastAPI
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.9.7

[options]
packages = find:
python_requires = >=3.6
install_requires =
    uvicorn[standard]==0.34.3
    fastapi==0.115.12
    fastapi-utils==0.8.0
    requests==2.32.3
    requests-oauthlib ==2.0.0
    prometheus_fastapi_instrumentator==7.1.0
    cachetools==6.0.0
    pydantic-settings==2.8.0

    boto3
    python-json-logger
    watchtower

[options.packages.find]
exclude=
    *.tests
